# ruby-llvm

./: .codeclimate.yml  .gitignore  .rubocop.yml  .rubocop_todo.yml  .travis.yml  CHANGELOG.md  LICENSE  README  README.md  README.rdoc  Rakefile  ruby-llvm-next.gemspec  ruby-llvm.gemspec
.github/: dependabot.yml
.github/workflows/: codeql.yml  linting.yml  testing.yml  typecheck.yml
ext/ruby-llvm-support/: Rakefile  configure.ac  support.cpp
ext/ruby-llvm-support/src/: Makefile.am
lib/: llvm.rb
lib/llvm/: analysis.rb  analysis_ffi.rb  bitcode.rb  builder.rb  core.rb  core_ffi.rb  core_ffi_v2.rb  execution_engine.rb  execution_engine_ffi.rb  linker.rb  linker_ffi.rb  lljit.rb  pass_builder.rb  support.rb  support_ffi.rb  target.rb  target_ffi.rb  version.rb
misc/homebrew/: llvm.rb
samples/: factorial.rb  fp.rb  hello.rb
sorbet/: README.md  config
sorbet/rbi/: todo.rbi
test/: array_test.rb  attribute_test.rb  basic_block_test.rb  basic_test.rb  binary_operations_test.rb  bitcode_test.rb  branch_test.rb  builder_gep_test.rb  builder_test.rb  call_test.rb  comparisons_test.rb  conversions_test.rb  double_test.rb  equality_test.rb  ffi_test.rb  function_test.rb  generic_value_test.rb  instruction_test.rb  integer_test.rb  ipo_test.rb  linker_test.rb  lljit_test.rb  mcjit_test.rb  memory_access_test.rb  module_test.rb  parameter_collection_test.rb  pass_builder_test.rb  pass_manager_builder_test.rb  phi_test.rb  return_test.rb  select_test.rb  struct_test.rb  target_test.rb  test_helper.rb  type_test.rb  value_test.rb  vector_test.rb
yardlib/: llvm.rb
(+67 files in other folders)
